ingress-will.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fanout-ingress
  namespace: coe
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
  rules:
  - host: xcitedb.asrc.albany.edu
    http:
      paths:
      - path: /will-jl
        pathType: ImplementationSpecific
        backend:
          service:
            name: will-jl
            port:
              number: 8888
  tls:
    - hosts:
      - xcitedb.asrc.albany.edu
      secretName: letsencrypt-production
